# soft3d-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  matrix.rs  renderer.rs  texture.rs  vector.rs  vertex.rs
