[package]
name = "soft3d-rs"
version = "0.1.0"
authors = ["KedamaOvO <moe@mao-yu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ansi_colours = "^1.0"
sdl2 = { version = "^0.31"}
image = "0.23.0"
cgmath = "0.17.0"